--- a/portfolio.html
+++ b/portfolio.html
@@ -87,12 +87,19 @@
           <ul class="list portfolio-example-container">
             <li class="portfolio-example-element">
               <a class="link current portfolio-example-link" href="">
-                <img
-                  src="./images/portfolio1.jpg"
-                  alt="Изображение ноутбука на котором открыта сраница сайта технокряк"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-work-example-wrapper">
+                  <img
+                    src="./images/portfolio1.jpg"
+                    alt="Изображение ноутбука на котором открыта сраница сайта технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-work-example">
                   <h2 class="portfolio-work-example-header">Технокряк</h2>
                   <p class="portfolio-work-example-text">Веб-сайт</p>
@@ -101,12 +108,19 @@
             </li>
             <li class="portfolio-example-element">
               <a class="link current portfolio-example-link" href="">
-                <img
-                  src="./images/portfolio2.jpg"
-                  alt="Изображение как двое мужчин играют в баскетбол"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-work-example-wrapper">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="Изображение как двое мужчин играют в баскетбол"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-work-example">
                   <h2 class="portfolio-work-example-header">
                     Постер<span lang="en">New Orlean vs Golden Star</span>
@@ -117,12 +131,19 @@
             </li>
             <li class="portfolio-example-element">
               <a class="link current portfolio-example-link" href="">
-                <img
-                  src="./images/portfolio3.jpg"
-                  alt="Изображение рыбы с надписью названия ресторана"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-work-example-wrapper">
+                  <img
+                    src="./images/portfolio3.jpg"
+                    alt="Изображение рыбы с надписью названия ресторана"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-work-example">
                   <h2 class="portfolio-work-example-header">
                     Ресторан<span lang="en"> Seafood</span>
@@ -133,12 +154,19 @@
             </li>
             <li class="portfolio-example-element">
               <a class="link current portfolio-example-link" href="">
-                <img
-                  src="./images/portfolio4.jpg"
-                  alt="Изображение наушников черного цвета"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-work-example-wrapper">
+                  <img
+                    src="./images/portfolio4.jpg"
+                    alt="Изображение наушников черного цвета"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-work-example">
                   <h2 class="portfolio-work-example-header">Проект<span lang="en"> Prime</span></h2>
                   <p class="portfolio-work-example-text">Маркетинг</p>
@@ -147,12 +175,19 @@
             </li>
             <li class="portfolio-example-element">
               <a class="link current portfolio-example-link" href="">
-                <img
-                  src="./images/portfolio5.jpg"
-                  alt="Изображение двух бумажных коробок белого и коричневого цвета"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-work-example-wrapper">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="Изображение двух бумажных коробок белого и коричневого цвета"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-work-example">
                   <h2 class="portfolio-work-example-header">Проект<span lang="en"> Boxes</span></h2>
                   <p class="portfolio-work-example-text">Приложение</p>
@@ -161,12 +196,19 @@
             </li>
             <li class="portfolio-example-element">
               <a class="link current portfolio-example-link" href="">
-                <img
-                  src="./images/portfolio6.jpg"
-                  alt="Изображение монитора на котором открыт веб-сайт компании"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-work-example-wrapper">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="Изображение монитора на котором открыт веб-сайт компании"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-work-example">
                   <h2 class="portfolio-work-example-header">
                     <span lang="en">Inspiration has no Borders</span>
@@ -177,12 +219,19 @@
             </li>
             <li class="portfolio-example-element">
               <a class="link current portfolio-example-link" href="">
-                <img
-                  src="./images/portfolio7.jpg"
-                  alt="Изображение расскрытой книги"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-work-example-wrapper">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="Изображение расскрытой книги"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-work-example">
                   <h2 class="portfolio-work-example-header">
                     Издание<span lang="en"> Limited Edition</span>
@@ -193,12 +242,19 @@
             </li>
             <li class="portfolio-example-element">
               <a class="link current portfolio-example-link" href="">
-                <img
-                  src="./images/portfolio8.jpg"
-                  alt="Изображение бумажной бирки с надписью"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-work-example-wrapper">
+                  <img
+                    src="./images/portfolio8.jpg"
+                    alt="Изображение бумажной бирки с надписью"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-work-example">
                   <h2 class="portfolio-work-example-header">Проект<span lang="en"> LAB</span></h2>
                   <p class="portfolio-work-example-text">Маркетинг</p>
@@ -207,12 +263,19 @@
             </li>
             <li class="portfolio-example-element">
               <a class="link current portfolio-example-link" href="">
-                <img
-                  src="./images/portfolio9.jpg"
-                  alt="Изображение рук которые печатают на нойтбуке"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-work-example-wrapper">
+                  <img
+                    src="./images/portfolio9.jpg"
+                    alt="Изображение рук которые печатают на нойтбуке"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-work-example">
                   <h2 class="portfolio-work-example-header">
                     <span lang="en">Growing Business</span>
