--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
           </a>
           <ul class="list navigation-list">
             <li class="nav-list-item">
-              <a class="link current properties-link" href="./index.html"> Студия </a>
+              <a class="link current properties-link menu-link" href="./index.html"> Студия </a>
             </li>
             <li class="nav-list-item">
-              <a class="link properties-link" href="./portfolio.html"> Портфолио </a>
+              <a class="link properties-link menu-link" href="./portfolio.html"> Портфолио </a>
             </li>
             <li class="nav-list-item">
-              <a class="link properties-link" href="#contacts">Контакты</a>
+              <a class="link properties-link menu-link href="#contacts">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -129,28 +129,44 @@
           <h2 class="studio-competencies-header">Чем мы занимаемся</h2>
           <ul class="list studio-competencies-item">
             <li class="studio-competencies-item-element">
+              <div class="studio-competencies-thumb">
               <img
                 src="./images/img1.jpg"
                 alt="Изображение процесса написания кода"
                 width="370"
                 height="294"
               />
+              <div class="overlay-competencies">
+                <p class="overlay-competencies-text">Десктопные приложения</p>
+              </div>
+            </div>
+
             </li>
             <li class="studio-competencies-item-element">
+              <div class="studio-competencies-thumb">
               <img
                 src="./images/img2.jpg"
                 alt="Изображение процесса создания приложения для телефона"
                 width="370"
                 height="294"
               />
+              <div class="overlay-competencies">
+                <p class="overlay-competencies-text">Мобильные приложения</p>
+              </div>
+            </div>
             </li>
             <li class="studio-competencies-item-element">
+              <div class="studio-competencies-thumb">
               <img
                 src="./images/img3.jpg"
                 alt="Изображение процесса создания веб-дизайна"
                 width="370"
                 height="294"
               />
+              <div class="overlay-competencies">
+                <p class="overlay-competencies-text">Дизайнерские решения</p>
+              </div>
+            </div>
             </li>
           </ul>
         </div>
