--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
           <h1 class="visually-hidden">Фильтр</h1>
           <ul class="list portfolio-filter-container">
             <li class="button-properties-list">
-              <button class="portfolio-filter button-properties" type="button">Все</button>
+              <button class="portfolio-filter button-properties current" type="button">Все</button>
             </li>
             <li class="button-properties-list">
               <button class="portfolio-filter button-properties" type="button">Веб-сайты</button>
